--- a/src/main/resources/themes/codearea/dracula.css
+++ b/src/main/resources/themes/codearea/dracula.css
@@ -52,6 +52,11 @@
     -fx-background-color: #282A36;
 }
 
+.context-menu {
+    -fx-font-family: system; /* 使用系统默认字体 */
+    -fx-font-size: 15; /* 设置期望的字体大小 */
+}
+
 .styled-text-area {
     -fx-font-size: 13px;
     -fx-font-family: 'JetBrains Mono Medium' !important;
